<resources>
    <string name="app_name">CameraAPP</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_your_account">Don\'t have an account? <font color='#f65a5b'>  Create your account.</font> </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="share">share</string>
    <string name="more">more</string>
    <string name="photos">Photos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_your_own_account">Create your own account.</string>
    <string name="like">like</string>
    <string name="now_follows_you">Now follows you!</string>
    <string name="you_are_now_following">You are now following!</string>
    <string name="reset">RESET</string>
    <string name="share_your_photos_with_the_world">Share your photos with the world!</string>
    <string name="upload_your_photo">Upload your photo.</string>
    <string name="cancel">CANCEL</string>
    <string name="next">next</string>
    <string name="almost_done_describe_your_photo">Almost done! Describe your photo</string>
    <string name="photo_description">Photo description</string>
    <string name="back">Back</string>
    <string name="do_you_want_make_photo_this_private_only_you_will_be_able_to_see_this_photo">Do you want to make this photo private? (Only you will be able to see it)</string>
    <string name="upload">Upload</string>
    <string name="done">Done!</string>
    <string name="congrats_you_are_done">Congrats! You are done.</string>
    <string name="add_photo">Add photo</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="year">year</string>
    <string name="has_liked">Has liked your photo!</string>
    <string name="profile">PROFILE</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="settings">SETTINGS</string>
    <string name="comment">Comment</string>
    <string name="feed">#FEED</string>
    <string name="dark_mode_preference">dark_mode_preference</string>
    <string name="dark_mode_theme">Dark mode theme</string>
    <string name="google_maps_key">AIzaSyAnmjhXYfpS_XUhdDkTzz3i3YxFEljrsHA</string>
    <string name="comments">%2$d comments</string>
    <string name="newest">NEWEST</string>
    <string name="oldest">OLDEST</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="home_screen">HOME SCREEN</string>
    <string name="camera">CAMERA</string>
    <string name="quote">Quote</string>
    <string name="description">Description</string>
    <string name="about_you">About you</string>
    <string name="new_password">New password</string>

</resources>
