<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icons_account"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:showAsAction="always" />
<!--    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        app:showAsAction="always" />-->
</menu>