<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="340dp"
            android:background="@drawable/login_fragment_shape"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="112dp"
            android:layout_height="47dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/login_text"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="41dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/myriadpro"
            android:scaleY="1.1"
            android:text="@string/don_t_have_an_account_create_your_account"
            android:textColor="@color/colorTextDark"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/TextInputStyle"
            android:layout_marginTop="35dp"
            android:hint="@string/password"
            app:counterTextColor="@color/colorSecondaryVariant"
            app:endIconDrawable="@drawable/lock_outline_black_24x24"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/user_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            style="@style/TextInputStyle"
            android:layout_marginTop="50dp"
            android:hint="@string/username"
            app:counterTextColor="@color/colorSecondaryVariant"
            app:endIconDrawable="@drawable/ic_person_outline_black_24dp"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="41dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/colorMidDarkText"
            android:textSize="@dimen/regular_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toTopOf="@+id/checkBox" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorTextDark"
            android:text="@string/remember_me"
            android:textAlignment="textStart"
            android:textColor="@color/colorMidDarkText"
            android:textSize="@dimen/regular_text_size"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:useMaterialThemeColors="true"
            tools:layout_editor_absoluteY="345dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/AuthButton"
            android:layout_width="220dp"

            android:layout_height="60dp"
            android:text="@string/login"
            android:layout_marginTop="35dp"
            android:elevation="5dp"
            android:translationZ="2dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/barrier3" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="checkBox,textView2"
            tools:layout_editor_absoluteY="785dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>