<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/photos_fragment_xml_constraintlayout6_scene">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:minHeight="40dp"
            app:cardCornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@id/photos_recyclerView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/photos_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:fontFamily="@font/myriadprolt"
            android:text="12 photos"
            android:textColor="@color/colorTextUser"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/materialCardView"
            app:layout_constraintStart_toStartOf="@id/materialCardView"
            app:layout_constraintTop_toTopOf="@id/materialCardView"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:singleLine="true"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="@id/materialCardView"
            app:layout_constraintEnd_toStartOf="@id/arrow_down"
            app:layout_constraintStart_toEndOf="@id/photos_count"
            app:layout_constraintTop_toTopOf="@id/materialCardView"
            app:layout_constraintVertical_bias="0.5"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/newest_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest" />

            <com.google.android.material.chip.Chip
                android:id="@+id/oldest_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oldest" />

            <com.google.android.material.chip.Chip
                android:id="@+id/most_popular_chip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/most_popular" />

        </com.google.android.material.chip.ChipGroup>

        <ImageView
            android:id="@+id/arrow_down"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/expand_down"
            android:backgroundTint="@color/colorAccent2"
            android:elevation="1dp"
            app:flow_verticalBias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="@id/materialCardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialCardView"
            app:spanCount="3"
            tools:itemCount="24"
            tools:listitem="@layout/photos_list_layout" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>