<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.android.cameraapp.data.data_models.UserCollection.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        tools:background="@color/colorSurface"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/divider6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/quote_text_input" />

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="326dp"
                android:transitionName="user_image"
                app:loadImageFromUrl="@{user.photo_url}"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/myriadpro"
                android:singleLine="true"
                android:text="@{user.username}"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/card_large"
                android:transitionName="user_name"
                app:layout_constraintBottom_toBottomOf="@+id/userImage"
                app:layout_constraintEnd_toStartOf="@+id/add_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/left_guideline" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/description"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/about_you">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_text_edit"
                    android:layout_width="match_parent"
                    android:text="@{user.description}"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quote_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/quote"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quote_text_edit"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{user.quote}"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/about_you"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/myriadpro"
                android:singleLine="true"
                android:text="@string/about_you"
                android:textColor="@color/colorAccent2"
                android:textSize="@dimen/regular_text_size"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/userImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/myriadpro"
                android:singleLine="true"
                android:text="@string/password"
                android:textColor="@color/colorAccent2"
                android:textSize="@dimen/regular_text_size"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/divider6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_password"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_text_edit"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeat_password_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/repeat_password"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/new_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password_text_edit"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/confirm"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/checkmark_png"
                android:backgroundTint="@color/colorAccent2"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/add_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/add_image_icon"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="@+id/user_name"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline" />

            <ImageButton
                android:id="@+id/cancel"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/cancel_icon"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toTopOf="@+id/confirm" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>